--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,18 @@
-.App {
-  text-align: center;
+nav {
+  background-color: #ffffff;
+}
+nav .brand-logo,
+nav ul a {
+  color: #000000;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card.card-login {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.card.card-login .card-content {
+  flex: 1;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card .card-title {
+  font-weight: normal;
 }
